# incubator-pegasus

./: .admin-cli-history  .arcconfig  .asf.yaml  .asf.yml  .clang-format  .clang-tidy  .gitignore  .gitmodules  .golangci.yml  .goreleaser.yml  .licenserc.yaml  .rat-excludes  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  DISCLAIMER  DISCLAIMER-WIP  HISTORY.md  LICENSE  Makefile  Makefile.nmake  NOTICE  Performance2.psess  README.md  Release Note.txt  appveyor.yml  build.sbt  build.sh  carrot  check_and_format.sh  check_format.sh  clear_onebox.sh  cluster_args.sh  compile_thrift.py  config-shell.ini.3191  config.ini  config.min.ini  config.yaml  config.yml  config_hdfs.sh  (+36 more)
ext/gtest/: CMakeLists.txt
ext/protobuf/: CMakeLists.txt
ext/thrift/: CMakeLists.txt  install_boost.cmd.template
ext/zookeeper/: CMakeLists.txt
src/: CMakeLists.txt  Makefile.nmake  build.sh  client.js  config-bench.ini  connection.js  dev.dsn  dsn.layer2.thrift  dsn.layer2_types.cpp  dsn.thrift  errors.js  makefile  operator.js  replication.thrift  session.js  tableHandler.js  table_handler.js  tools.js
src/aio/: CMakeLists.txt  aio_provider.cpp  aio_provider.h  aio_task.cpp  aio_task.h  disk_engine.cpp  disk_engine.h  file_io.cpp  file_io.h  native_linux_aio_provider.cpp  native_linux_aio_provider.h  sim_aio_provider.cpp  sim_aio_provider.h
src/apps/: CMakeLists.txt  Makefile.nmake  counter.dsn  makefile
src/base/: CMakeLists.txt  counter_utils.h  endians.h  idl_utils.h  meta_store.cpp  meta_store.h  pegasus_const.cpp  pegasus_const.h  pegasus_key_schema.h  pegasus_rpc_types.h  pegasus_utils.cpp  pegasus_utils.h  pegasus_value_generator.cpp  pegasus_value_generator.h  pegasus_value_manager.cpp  pegasus_value_manager.h  pegasus_value_schema.h  pegasus_value_segment.h  pegasus_value_service.cpp  pegasus_value_service.h  rrdb_types.cpp  string_view.h  value_field.h  value_generator.cpp  value_generator.h  value_manager.cpp  value_manager.h  value_schema.h  value_schema_manager.cpp  value_schema_manager.h  value_schema_v0.cpp  value_schema_v0.h  value_schema_v1.cpp  value_schema_v1.h  value_schema_v2.cpp  value_schema_v2.h
src/block_service/: CMakeLists.txt  block_service.h  block_service_manager.cpp  block_service_manager.h  directio_writable_file.cpp  directio_writable_file.h
src/cli/: cli.client.h  cli.main.cpp  cli.types.h  cli_app.cpp  cli_app.h  config.ini  main.cpp
src/client/: CMakeLists.txt  partition_resolver.cpp  partition_resolver.h  partition_resolver_manager.cpp  partition_resolver_manager.h  partition_resolver_simple.cpp  partition_resolver_simple.h  replication_ddl_client.cpp  replication_ddl_client.h
src/client_lib/: CMakeLists.txt  client_factory.cpp  mutation.cpp  pegasus_client_factory_impl.cpp  pegasus_client_factory_impl.h  pegasus_client_impl.cpp  pegasus_client_impl.h  pegasus_scanner_impl.cpp
src/common/: CMakeLists.txt  api_common.h  backup.thrift  backup_common.cpp  backup_common.h  backup_utils.cpp  backup_utils.h  bulk_load.thrift  bulk_load_common.cpp  bulk_load_common.h  common.cpp  common.h  consensus.thrift  duplication.thrift  duplication_common.cpp  duplication_common.h  duplication_internal.thrift  fs_manager.cpp  fs_manager.h  gpid.h  json_helper.h  manual_compact.h  meta_admin.thrift  metadata.thrift  partition_split.thrift  partition_split_common.h  replica_admin.thrift  replica_envs.cpp  replica_envs.h  replication.codes.h  replication_common.cpp  replication_common.h  replication_enums.h  replication_other_types.h  replication_types.cpp  storage_serverlet.h
src/core/: CMakeLists.txt  Makefile.nmake  address.cpp  admission_controller.cpp  aio_provider.cpp  command_manager.cpp  command_manager.h  configuration.cpp  coredump.posix.cpp  coredump.win.cpp  crc.h  disk_engine.cpp  disk_engine.h  end_point.cpp  env_provider.cpp  error_code.cpp  global_config.cpp  join_point.cpp  lf.ll.cpp  logging.cpp  makefile  memory_provider.cpp  message_parser.cpp  network.cpp  perf_counter.cpp  perf_counters.cpp  rdsn.core.vcxproj  rdsn.core.vcxproj.filters  rpc_engine.cpp  rpc_engine.h  rpc_message.cpp  service_api.cpp  service_api_c.cpp  service_app.cpp  service_engine.cpp  service_engine.h  task.cpp  task_code.cpp  task_engine.cpp  task_engine.h  (+8 more)
src/dev/: CMakeLists.txt  Makefile.nmake  file_server.cpp  makefile  rdsn.dev.vcxproj  rdsn.dev.vcxproj.filters  service.api.oo.impl.cpp  service.cpp
src/dsn/: base_types.js
src/failure_detector/: CMakeLists.txt  failure_detector.cpp  failure_detector.h  failure_detector_multimaster.cpp  failure_detector_multimaster.h  fd.client.h  fd.code.definition.h  fd.server.h  fd.thrift  fd_types.cpp
src/geo/: CMakeLists.txt
src/gutil/: CMakeLists.txt  map_traits.h  map_util.h  no_destructor.h
src/http/: CMakeLists.txt  builtin_http_calls.cpp  builtin_http_calls.h  config_http_service.cpp  http_call_registry.h  http_client.cpp  http_client.h  http_message_parser.cpp  http_message_parser.h  http_method.h  http_server.cpp  http_server.h  http_server_impl.h  http_status_code.cpp  http_status_code.h  perf_counter_http_service.cpp  perf_counter_http_service.h  pprof_http_service.cpp  pprof_http_service.h  root_http_service.h  server_info_http_services.cpp  server_info_http_services.h  service_version.cpp  service_version.h  uri_decoder.cpp  uri_decoder.h
src/idl/: dsn.thrift  recompile_thrift.sh  rrdb.thrift  rrdb.thrift.annotations
src/meta/: CMakeLists.txt  app_balance_policy.cpp  app_balance_policy.h  app_env_validator.cpp  app_env_validator.h  backup_engine.cpp  backup_engine.h  cluster_balance_policy.cpp  cluster_balance_policy.h  distributed_lock_service_simple.cpp  distributed_lock_service_simple.h  dump_file.h  greedy_load_balancer.cpp  greedy_load_balancer.h  load_balance_policy.cpp  load_balance_policy.h  meta_backup_engine.cpp  meta_backup_engine.h  meta_backup_service.cpp  meta_backup_service.h  meta_bulk_load_ingestion_context.cpp  meta_bulk_load_ingestion_context.h  meta_bulk_load_service.cpp  meta_bulk_load_service.h  meta_data.cpp  meta_data.h  meta_http_service.cpp  meta_http_service.h  meta_options.cpp  (+27 more)
(+5684 files in other folders)
